# SonixBeautyStudio

./: .clang-format  .gitignore  .gitmodules  .qmlls.ini  AndroidDebug.ps1  CMakeLists.txt  CMakePresets.json  README.md  buildApplication.ps1  buildApplication.sh  creatApp.sh  qtquickcontrols2.conf
cmake/: import3rd.cmake  importBuild.cmake  importConfig.cmake  importPack.cmake  importQConf.cmake  importQt.cmake  importSource.cmake  importTranslate.cmake
config/Android/: android_release.keystore
config/dataBase/: UAS.db
i18n/: qml_en.ts  qml_zh_CN.ts
presets/: CMakePresets-Android.json  CMakePresets-PC.json
script/: AndroidDebug.ps1  buildApplication.ps1  buildApplication.sh
src/: main.cpp
src/AndroidWindow/: AndroidWindow.cpp  AndroidWindow.h
src/ApplicationConfig/: ApplicationConfig.cpp  ApplicationConfig.h
src/SystemConfig/: SystemConfig.cpp
src/ViewEngine/: AndroidWindow.cpp  ViewEngine.cpp  ViewEngine.h
src/global/: PublicDefine.hpp
third/JNIModule/: .qmlls.ini  CMakeLists.txt
third/QSystemModule/: CMakeLists.txt
third/SonixBeautyJNI/: CMakeLists.txt
third/SonixBeautyKits/: CMakeLists.txt
third/SonixBeautyKits/cmake/: import3rd.cmake  importConfig.cmake  importQt.cmake  importSource.cmake
third/SonixBeautyKits/src/: SonixLogger.cpp  SonixLogger.h
third/SonixBeautyKits/src/Translator/: Translator.cpp  Translator.h
third/SonixBeautyKits/src/WinWifiConfig/: WinWifiConfig.cpp
translate/: SonixBeautyStudio_en.ts  SonixBeautyStudio_zh_CN.ts
view/: AndroidMain.qml  App.qml  LoginPage.qml  Main.qml  WinMain.qml
(+109 files in other folders)
